--- a/SOSANHGIA-UPDATE1/css/main.css
+++ b/SOSANHGIA-UPDATE1/css/main.css
@@ -1401,8 +1401,7 @@ h1.intro-header::before {
 
 #home {
   width: 100%;
-  height: 786px;
-  min-height: 786px;
+  height: 600px;
   background-color: transparent;
   position: relative;
   display: table;
@@ -2446,7 +2445,7 @@ footer ul a:visited {
 
 .footer-social-list {
   font-size: 1.8rem;
-  margin-top: -1.5rem;
+  margin-top: 1.5rem;
   margin-bottom: 3rem;
 }
 
@@ -2675,5 +2674,73 @@ footer ul a:visited {
   }
 }
 
-
+#banner-menu{
+  height:72px;
+  position: fixed;
+  display:block;
+  margin-left:10%;
+  margin-right:10%;
+}
+#menu-logo{
+  width:20%;
+  height:100%;
+  font-size: 30px;
+  color:white;
+  text-align: center;
+  margin-top:14px;
+  float:left;
+}
+#menu-space{
+  width:30%;
+  height:100%;
+  float:left;
+}
+#menu-menu{
+  width:50%;
+  height:100%;
+  float:left;
+  cursor:pointer;
+}
+#menu-menu ul{
+  text-align: center;
+  list-style-type:none;
+  font-size:20px;
+  color:white ;
+  height:100%;
+  margin-top:0px !important;
+}
+#menu-menu li{
+  width: 25%;
+  height:100%;
+  float:left;
+  line-height:70px;
+}
+#banner-logo{
+  font-family: 'Dancing Script', cursive;
+  font-size: 100px;
+  color:white;
+  clear:both;
+  position:static;
+  margin-top: 10%;
+  margin-left:10%
+}
+.banner-logo-chugiai{
+  color:white;
+  font-size: 40px;
+  margin-left: 20%;
+}
+#banner{
+  width: 100%;
+  height: 72px;
+ background: linear-gradient( 135deg, #FF6FD8 10%, #3813C2 100%);
+  position: fixed;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
+  transform: translateX(-50%);
+  z-index: 501;
+}
+.nav-bar{
+  display:none;
+}
 /*# sourceMappingURL=main.css.map */
